--- a/templates/faculty_file.html
+++ b/templates/faculty_file.html
@@ -57,6 +57,7 @@
         border: 1px solid #ddd;
         border-radius: 4px;
         padding: 10px;
+        margin-top: 10px;
       }
 
       .feedback-form {
@@ -67,12 +68,13 @@
         width: 100%;
         padding: 8px;
         box-sizing: border-box;
+        border-radius: 4px;
         resize: vertical;
       }
 
       .feedback-form button {
         margin-top: 10px;
-        padding: 8px 16px;
+        padding: 6px 12px;
         background-color: #4caf50;
         color: #fff;
         border: none;
@@ -134,20 +136,37 @@
                   {% endif %}
               </div>
               {% endfor %}
+
+
               {% if not is_guest and not is_director %}
               <div class="feedback-box">
-                <h4>Feedback</h4>
-                <form action="" method="POST">
-                  {% csrf_token %}
-                  <div class="feedback-form">
-                    <input type="hidden" name="contribution_id" value="{{ contribution.id }}">
-                    <textarea name="comment" placeholder="Leave your feedback..."></textarea>
-                    <button>Submit Feedback</button>
-                  </div>
-                </form>
-              </div>
-              {% endif %}
+              {% for file in contribution.files.all %}
+                {% if contribution.comments.count == 0 %}
+                  <p>
+                    <strong>No one has comment yet...</strong>
+                  </p>
+                {% else %}
+                  {% for comment in comments %}
+                  <p>
+                    <strong>{{ comment.user.fullname }}: </strong>{{comment.comment }}
+                  </p>
+                  {% endfor %}
+                {% endif %}
+              {% endfor %}
+                </div>
+                <div class="feedback-box">
+                  <h5 style="margin-bottom: 5px;">Contribution feedbacks:</h5>
+                  <form action="" method="POST">
+                    {% csrf_token %}
+                    <div class="feedback-form">
+                      <input type="hidden" name="contribution_id" value="{{ contribution.id }}">
+                      <textarea name="comment" placeholder="Leave your comment..."></textarea>
+                      <button>Submit Feedback</button>
+                    </div>
+                  </form>
+                </div>
             </div>
+            {% endif %}
             {% empty %}
             <p>No files available for this faculty.</p>
             {% endfor %}
@@ -155,7 +174,7 @@
           
 
           <!-- Navigation Container -->
-          <div class="col-md-4 mx-auto">
+          {% comment %} <div class="col-md-4 mx-auto">
             <div class="navigation-container">
               <div class="navigation-options">
                 <!-- Add your navigation options here -->
@@ -167,7 +186,7 @@
                 </ul>
               </div>
             </div>
-          </div>
+          </div> {% endcomment %}
         </div>
       </div>
     </section>
