create Enroll code and update create academicyear

--- a/templates/academic_years_form.html
+++ b/templates/academic_years_form.html
@@ -181,6 +181,17 @@
                                         required
                                       />
                                     </div>
+
+                                    <div>
+                                        <label for="code">Enroll code</label>
+                                        <input
+                                          type="text"
+                                          id="code"
+                                          name="code"
+                                          value="{{ academic_year.code }}"
+                                          required
+                                        />
+                                      </div>
                                     <br />
                                     <div class="text-center">
                                       {% if page == "create" %}
