commit 12: add terms and policies template

--- a/templates/upload.html
+++ b/templates/upload.html
@@ -103,6 +103,9 @@
               onclick="toggleUploadButton()"
             /> I completely agree with the terms and policies.</label>
             <input type="submit" value="Upload" id="uploadButton" />
+            <div class="text-center">
+              <a href="{% url "term_policy" %}">EDU MEETING's Terms and Policies.</a>
+            </div>
           </form>
         </section>
       </div>
