--- a/templates/register.html
+++ b/templates/register.html
@@ -137,6 +137,9 @@
                             <input type="password" name="repassword" required>
                             <label for="">Confirm Password</label>
                         </div>
+                        <div>
+                            <label for="">Skip this part if you not a student.</label>
+                        </div>
                         <div style="margin-bottom: 25px">
                             <label for="id_faculty">Faculty</label>
                               <select name="faculty" id="id_faculty">
