--- a/templates/upload.html
+++ b/templates/upload.html
@@ -109,26 +109,13 @@
     </section>
     <section class="contact-us" id="contact">
       <div class="footer">
-        <p>
-          Copyright © 2022 Edu Meeting Co., Ltd. All Rights Reserved.
-          <br />
-          Design:
-          <a
-            href="https://templatemo.com"
-            target="_parent"
-            title="free css templates"
-            >TemplateMo</a
-          >
-          <br />
-          Distibuted By:
-          <a
-            href="https://themewagon.com"
-            target="_blank"
-            title="Build Better UI, Faster"
-            >ThemeWagon</a
-          >
-        </p>
-      </div>
+      <p>Copyright © 2022 Edu Meeting Co., Ltd. All Rights Reserved.
+        <br>
+        Design: <a href="#" target="_parent" title="free css templates">Trinh, Khoi, Kiet, Ratana and Hieu.</a>
+        <br>
+        Distibuted By: <a href="#" target="_blank" title="Build Better UI, Faster">Edu Meeting Inc.</a>
+      </p>
+    </div>
     </section>
 
     <script src="{%static 'vendor/jquery/jquery.min.js' %}"></script>
