commit 17: changes template

--- a/templates/header.html
+++ b/templates/header.html
@@ -69,7 +69,7 @@ https://templatemo.com/tm-569-edu-meeting
                     {% endif %}
                     {% if is_director %}
                     <li>
-                        <a href="{% url 'show_contributions' %}">Download Contributions</a>
+                        <a href="{% url 'show_contributions' %}">Download Zip Files</a>
                     </li>
                     {% endif %}
                     {% if is_student %}
