--- a/templates/show_contribution.html
+++ b/templates/show_contribution.html
@@ -41,7 +41,7 @@
             <thead class="thead-dark">
               <tr>
                 <th scope="col">Contribution Name</th>
-                <th scope="col">Information</th>
+                <th scope="col">Files</th>
                 <th scope="col">Actions</th>
               </tr>
             </thead>
@@ -86,22 +86,11 @@
 
     <section class="contact-us" id="contact">
       <div class="footer">
-        <p>
-          Copyright © 2022 Edu Meeting Co., Ltd. All Rights Reserved.
-          <br />
-          Design:
-          <a
-            href="https://templatemo.com"
-            target="_parent"
-            title="free css templates"
-            >TemplateMo</a>
-          <br />
-          Distibuted By:
-          <a
-            href="https://themewagon.com"
-            target="_blank"
-            title="Build Better UI, Faster"
-            >ThemeWagon</a>
+        <p>Copyright © 2022 Edu Meeting Co., Ltd. All Rights Reserved.
+          <br>
+          Design: <a href="#" target="_parent" title="free css templates">Trinh, Khoi, Kiet, Ratana and Hieu.</a>
+          <br>
+          Distibuted By: <a href="#" target="_blank" title="Build Better UI, Faster">Edu Meeting Inc.</a>
         </p>
       </div>
     </section>
